Se completa el trabajo de visualizacion de los datos. Close

--- a/notebooks/Comprensión-Datos/CD01-Visualizacion_MaritzaPinta.ipynb
+++ b/notebooks/Comprensión-Datos/CD01-Visualizacion_MaritzaPinta.ipynb
@@ -17,16 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install pandas\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,17 +34,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pip install dvc\n"
+    "Carga de los datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,21 +188,14 @@
     }
    ],
    "source": [
-    "df_creditos = pd.read_csv(r\"C:\\MARITZA\\MAESTRIA EN CIENCIAS DE DATOS\\DATOS\\datos_creditos.csv\", sep=\";\")\n",
+    "df_creditos = pd.read_csv(\"../../data/raw/datos_creditos.csv\", sep=\";\")\n",
     "\n",
     "display(df_creditos.head(5))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Carga de los datasets"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -353,8 +335,9 @@
     }
    ],
    "source": [
-    "df_tarjetas = pd.read_csv(r\"C:\\MARITZA\\MAESTRIA EN CIENCIAS DE DATOS\\DATOS\\datos_tarjetas.csv\", sep=\";\")\n",
-    "display(df_tarjetas.head(5))\n"
+    "df_tarjetas = pd.read_csv(\"../../data/raw/datos_tarjetas.csv\", sep=\";\")\n",
+    "\n",
+    "display(df_tarjetas.head(5))"
    ]
   }
  ],
