--- a/notebooks/02-Comprensión-Datos/CD02-Exploracion_MaritzaPinta.ipynb
+++ b/notebooks/02-Comprensión-Datos/CD02-Exploracion_MaritzaPinta.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -449,9 +449,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-28 11:08:05,722 - INFO     - Executing shutdown due to inactivity...\n",
+      "2024-11-28 11:08:09,923 - INFO     - Executing shutdown...\n",
+      "2024-11-28 11:08:09,953 - INFO     - Not running with the Werkzeug Server, exiting by searching gc for BaseWSGIServer\n"
+     ]
+    }
+   ],
    "source": [
     "# Se usa la librería dtale para poder obtener una vista interactiva de los datos\n",
     "\n",
@@ -463,9 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-28 07:57:17,576 - INFO     - Executing shutdown due to inactivity...\n"
+     ]
+    }
+   ],
    "source": [
     "# Dataset: datos_tarjetas\n",
     "\n",
@@ -484,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
