--- a/notebooks/03-Preparacion-Datos/PD01-Transformaciones_MaritzaPinta.ipynb
+++ b/notebooks/03-Preparacion-Datos/PD01-Transformaciones_MaritzaPinta.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>edad</th>\n",
+       "      <th>importe_solicitado</th>\n",
+       "      <th>duracion_credito</th>\n",
+       "      <th>antiguedad_empleado</th>\n",
+       "      <th>situacion_vivienda</th>\n",
+       "      <th>ingresos</th>\n",
+       "      <th>objetivo_credito</th>\n",
+       "      <th>pct_ingreso</th>\n",
+       "      <th>tasa_interes</th>\n",
+       "      <th>estado_credito</th>\n",
+       "      <th>falta_pago</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>713061558.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>ALQUILER</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>16.02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id_cliente  edad  importe_solicitado  duracion_credito  \\\n",
+       "0  713061558.0    22               35000                 3   \n",
+       "\n",
+       "   antiguedad_empleado situacion_vivienda  ingresos objetivo_credito  \\\n",
+       "0                123.0           ALQUILER     59000         PERSONAL   \n",
+       "\n",
+       "   pct_ingreso  tasa_interes  estado_credito falta_pago  \n",
+       "0         0.59         16.02               1          Y  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>antiguedad_cliente</th>\n",
+       "      <th>estado_civil</th>\n",
+       "      <th>estado_cliente</th>\n",
+       "      <th>gastos_ult_12m</th>\n",
+       "      <th>genero</th>\n",
+       "      <th>limite_credito_tc</th>\n",
+       "      <th>nivel_educativo</th>\n",
+       "      <th>nivel_tarjeta</th>\n",
+       "      <th>operaciones_ult_12m</th>\n",
+       "      <th>personas_a_cargo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>713061558.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>CASADO</td>\n",
+       "      <td>ACTIVO</td>\n",
+       "      <td>1088.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4010.0</td>\n",
+       "      <td>UNIVERSITARIO_COMPLETO</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id_cliente  antiguedad_cliente estado_civil estado_cliente  \\\n",
+       "0  713061558.0                36.0       CASADO         ACTIVO   \n",
+       "\n",
+       "   gastos_ult_12m genero  limite_credito_tc         nivel_educativo  \\\n",
+       "0          1088.0      M             4010.0  UNIVERSITARIO_COMPLETO   \n",
+       "\n",
+       "  nivel_tarjeta  operaciones_ult_12m  personas_a_cargo  \n",
+       "0          Blue                 24.0               2.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df_creditos = pd.read_csv(\"../../data/processed/datos_creditos_mc.csv\", sep=\";\")\n",
     "display(df_creditos.head(1))\n",
@@ -78,7 +215,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id_cliente', 'edad', 'importe_solicitado', 'duracion_credito',\n",
+       "       'antiguedad_empleado', 'situacion_vivienda', 'ingresos',\n",
+       "       'objetivo_credito', 'pct_ingreso', 'tasa_interes', 'estado_credito',\n",
+       "       'falta_pago'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_creditos.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id_cliente', 'antiguedad_cliente', 'estado_civil', 'estado_cliente',\n",
+       "       'gastos_ult_12m', 'genero', 'limite_credito_tc', 'nivel_educativo',\n",
+       "       'operaciones_ult_12m', 'personas_a_cargo'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tarjetas.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +279,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vista del dataset de datos de créditos:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>edad</th>\n",
+       "      <th>importe_solicitado</th>\n",
+       "      <th>duracion_credito</th>\n",
+       "      <th>antiguedad_empleado</th>\n",
+       "      <th>situacion_vivienda</th>\n",
+       "      <th>ingresos</th>\n",
+       "      <th>objetivo_credito</th>\n",
+       "      <th>pct_ingreso</th>\n",
+       "      <th>tasa_interes</th>\n",
+       "      <th>estado_credito</th>\n",
+       "      <th>falta_pago</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>713061558.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>ALQUILER</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>16.02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id_cliente  edad  importe_solicitado  duracion_credito  \\\n",
+       "0  713061558.0    22               35000                 3   \n",
+       "\n",
+       "   antiguedad_empleado situacion_vivienda  ingresos objetivo_credito  \\\n",
+       "0                123.0           ALQUILER     59000         PERSONAL   \n",
+       "\n",
+       "   pct_ingreso  tasa_interes  estado_credito falta_pago  \n",
+       "0         0.59         16.02               1          Y  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vista del dataset de datos de tarjetas:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>antiguedad_cliente</th>\n",
+       "      <th>estado_civil</th>\n",
+       "      <th>estado_cliente</th>\n",
+       "      <th>gastos_ult_12m</th>\n",
+       "      <th>genero</th>\n",
+       "      <th>limite_credito_tc</th>\n",
+       "      <th>nivel_educativo</th>\n",
+       "      <th>operaciones_ult_12m</th>\n",
+       "      <th>personas_a_cargo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>713061558.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>CASADO</td>\n",
+       "      <td>ACTIVO</td>\n",
+       "      <td>1088.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4010.0</td>\n",
+       "      <td>UNIVERSITARIO_COMPLETO</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id_cliente  antiguedad_cliente estado_civil estado_cliente  \\\n",
+       "0  713061558.0                36.0       CASADO         ACTIVO   \n",
+       "\n",
+       "   gastos_ult_12m genero  limite_credito_tc         nivel_educativo  \\\n",
+       "0          1088.0      M             4010.0  UNIVERSITARIO_COMPLETO   \n",
+       "\n",
+       "   operaciones_ult_12m  personas_a_cargo  \n",
+       "0                 24.0               2.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(\"Vista del dataset de datos de créditos:\")\n",
     "display(df_creditos.head(1))\n",
@@ -442,7 +775,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -456,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
